--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.26",
+    "@google/generative-ai": "^0.24.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vapi-ai/server-sdk": "^0.10.2",
+    "@vapi-ai/web": "^2.5.0",
     "@vercel/analytics": "^1.5.0",
+    "ai": "^5.0.84",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.4",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "^15.5.6",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.18.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
