--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.26",
+    "@anthropic-ai/sdk": "^0.71.2",
+    "@google/genai": "^1.33.0",
     "@google/generative-ai": "^0.24.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
@@ -19,6 +21,7 @@
     "@vapi-ai/web": "^2.5.0",
     "@vercel/analytics": "^1.5.0",
     "ai": "^5.0.84",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,6 +31,7 @@
     "next": "^15.5.6",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
+    "openai": "^6.10.0",
     "prisma": "^6.18.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
