--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "form-data": "^4.0.4",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
-    "next": "^15.5.6",
+    "next": "15.5.9",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "openai": "^6.10.0",
